wrap moblie fix
wrap moblie fix

--- a/src/components/PageComponent/ProductPage/ArticlePage.css
+++ b/src/components/PageComponent/ProductPage/ArticlePage.css
@@ -7,7 +7,6 @@
   margin-bottom: 10px;
 }
 .ArticlePage__wrap{
-  width: 80%;
 }
 .ArticlePage__User {
   margin-bottom: 1em;
